# email-tickets-processor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: b5c8a7db690d_initial.py
src/: etl.py  main.py
src/application/: get_ticket_files.py  load_tickets_in_db.py  mark_email_as_read.py  transform_pdf_to_json.py
src/domain/: ticket.py  ticket_item.py  tmp_file_manager.py  unit_of_work.py
src/domain/connectors/: email.py  tickets_analyzer_api.py
src/domain/models/: __init__.py  ticket.py  ticket_item.py
src/domain/repositories/: ticket.py  ticket_item.py
src/infrastructure/: sqlalchemy_unit_of_work.py
src/infrastructure/connectors/: gmail_email.py  requests_tickets_analyzer_api.py
src/infrastructure/repositories/: postgres_ticket.py  postgres_ticket_item.py
