[tool.poetry]
name = "email-tickets-processor"
version = "0.1.0"
description = ""
authors = ["Carlos Sánchez Páez <karlossanpa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

alembic = "^1.13.3"
google-api-python-client = "^2.149.0"
requests = "^2.32.3"
google-auth-oauthlib = "^1.2.1"
sqlalchemy = "^2.0.35"
psycopg = {version = "^3.2.3", extras = ["binary"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
